--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(243, 226, 151);
     margin: 0px;
-    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.39);
     background-image: url(imagens/praia01.jpg);
     background-repeat: no-repeat ;
     background-size: cover;
@@ -28,6 +27,13 @@ body {
  h3{
     color: white;
     box-shadow: none;
+    text-align: left;
+    margin: 15px;
+ }
+
+ h4{
+    color: rgb(0, 204, 255);
+    box-shadow: none;
  }
 
  p{
@@ -41,7 +47,8 @@ body {
  }
 
  li {
-     text-align: center;
+     font-family: Arial, Helvetica, sans-serif;   
+     color: white;
      
  }
 
@@ -62,4 +69,8 @@ nav > a{                    /*link do menu*/
 nav > a:hover {             /*quando passa o mouse em cima*/
     background-color: var(--cor3);
     color: rgb(136, 208, 250);
+}
+
+img{
+    background-size: cover;
 }
