--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+main{
+
+    min-width: 320px;
+    max-width: 1090px;
+}
+
 body {
 
     text-align: center; 
@@ -7,7 +13,7 @@ body {
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(243, 226, 151);
-    margin: 0px;
+    margin: auto;
     background-image: url(imagens/praia01.jpg);
     background-repeat: no-repeat ;
     background-size: cover;
@@ -43,7 +49,13 @@ body {
  div {
      text-align: center; 
      background-color: rgb(243, 226, 151);
-     background-image: linear-gradient(to top, rgb(238, 203, 49),rgb(245, 86, 46));  
+     background-image: linear-gradient(to top, rgb(238, 203, 49),rgb(245, 86, 46));
+     
+       
+ }
+
+ div > img{
+    width: 100%;
  }
 
  li {
@@ -72,5 +84,6 @@ nav > a:hover {             /*quando passa o mouse em cima*/
 }
 
 img{
+    
     background-size: cover;
 }
