--- a/style.css
+++ b/style.css
@@ -65,13 +65,14 @@ body {
  }
 
  nav{                        /*menu*/
-    background-color: var(--cor5);
+   
     padding: 10px; /*distanciamento*/
     box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.315);
 }
 
 nav > a{                    /*link do menu*/
     color: white;
+    background-color: rgb(216, 31, 154);
     padding: 10px; /*dist. dos links*/
     border-radius: 5px; /*arred. da borda*/
     text-decoration: none; /*tirar sublinhado*/ 
