--- a/styleArtistas.css
+++ b/styleArtistas.css
@@ -71,3 +71,7 @@ p{
     background-color: rgb(68, 185, 240); 
     margin-left: 10px;
 }
+ .Patrocinio img{
+    width: 800px;
+    right: 100%;
+ }
