--- a/style.css
+++ b/style.css
@@ -72,11 +72,13 @@ body {
    
     padding: 10px; /*distanciamento*/
     box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.315);
+    width: 100%;
 }
 
 nav > a{                    /*link do menu*/
    color: rgb(136, 208, 250);
    background-color: orangered;
+   
     
     padding: 10px; /*dist. dos links*/
     border-radius: 5px; /*arred. da borda*/
