--- a/style.css
+++ b/style.css
@@ -68,18 +68,15 @@ body {
      
  }
 
-div > nav{                        /*menu*/
+nav{                        /*menu*/
    
-    padding: 10px; /*distanciamento*/
-    box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.315);
-    width: 100%;
+    display: inline-block;
 }
 
 nav > a{                    /*link do menu*/
    color: rgb(136, 208, 250);
    background-color: orangered;
-   
-    
+   display: inline-block;
     padding: 10px; /*dist. dos links*/
     border-radius: 5px; /*arred. da borda*/
     text-decoration: none; /*tirar sublinhado*/ 
