--- a/styleGaleria.css
+++ b/styleGaleria.css
@@ -15,8 +15,9 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(243, 226, 151);
     margin: auto;
+    text-align: center;
 }
-.logo{
+.logo img{
     width: 100%;
     background-size: cover;
     background: linear-gradient(to top, rgb(238, 203, 49),rgb(245, 86, 46));
@@ -57,14 +58,9 @@ a > img{
     text-align: center;
 }
 
-
-nav{                        /*menu*/
-    background-color: var(--cor5);
-    padding: 10px; /*distanciamento*/
-    box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.315);
-    text-align: center;
+nav {
+    display: inline-block;
 }
-
 nav > a{                    /*link do menu*/
     color:  rgb(136, 208, 250);
     background-color: orangered;
@@ -72,6 +68,7 @@ nav > a{                    /*link do menu*/
     border-radius: 5px; /*arred. da borda*/
     text-decoration: none; /*tirar sublinhado*/ 
     font-weight: bolder; /*negrito*/
+    display: inline-flex;
     
 }
 
