--- a/styleArtistas.css
+++ b/styleArtistas.css
@@ -74,7 +74,7 @@ p{
     background-color: rgb(68, 185, 240); 
     margin-left: 10px;
 }
- .Patrocinio img{
-    width: 800px;
-    right: 100%;
- }
+
+.Patrocinio img{
+   width: 100%;
+}
