--- a/styleComoChegar.css
+++ b/styleComoChegar.css
@@ -13,7 +13,8 @@ body{
 
 }
 nav {
-    display: inline-flex;
+    display: inline-block;
+    
 }
 nav > a{                    /*link do menu*/
     background-color: orangered;
