--- a/stylePacotes.css
+++ b/stylePacotes.css
@@ -84,7 +84,11 @@ main {
     width: 220px;
     height: 60px;
   }
+  .lote > img{
+    width: 100%;
+  }
  
-  .Patrocinio img{
+  .Patrocinio
+   img{
    width: 100%;
   }
